force-app/main/default/objects/Case/fields/Complaint_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Complaint Date</label>
    <type>Date</type>
</CustomField>