force-app/main/default/objects/Case/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order__c.SAP_Order__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>