force-app/main/default/objects/Case/fields/Solution_Method__c.field-meta.xml
<CustomField>
    <fullName>Solution_Method__c</fullName>
    <label>Solution Method</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>