force-app/main/default/objects/Case/fields/Unqualified_Percent__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Percent__c</fullName>
    <label>Unqualified Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>