force-app/main/default/objects/Case/fields/Unqualified_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Quantity__c</fullName>
    <label>Unqualified Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>