force-app/main/default/objects/Case/recordTypes/Subsidiary.recordType-meta.xml
<RecordType>
    <fullName>Subsidiary</fullName>
    <active>true</active>
    <businessProcess>Subsidiary</businessProcess>
    <label>Subsidiary</label>
</RecordType>