force-app/main/default/objects/Case/validationRules/Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( Status )=&apos;Cancel&apos;,ISBLANK(Cancel_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Cancel_Reason__c</errorDisplayField>
    <errorMessage>Cancel Reason Required</errorMessage>
</ValidationRule>