force-app/main/default/objects/Case/listViews/Copy_of_All_Open_Complaints.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Open_Complaints</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.TYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Order_Item__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Approve_Status__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Resolved__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>